--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <link type="text/css" rel="stylesheet" href="general.css" />
         <link type="text/css" rel="stylesheet" href="table.css" />
         
-        <script type="text/javascript" src="https://github.com/HumbleSoftware/Flotr2/blob/master/flotr2.js"></script>
-        <script type="text/javascript" src="../awesomizr.js"></script>
+        <script type="text/javascript" src="flotr2.js"></script>
+        <script type="text/javascript" src="awesomizr.js"></script>
         <script type="text/javascript" src="script.js"></script>
         
         <script type="text/javascript">
