--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
         <title>JavaScript Sample</title>
-        <link href="../common.css" rel="stylesheet" type="text/css"/>
+        <link href="common.css" rel="stylesheet" type="text/css"/>
         
         <link type="text/css" rel="stylesheet" href="general.css" />
         <link type="text/css" rel="stylesheet" href="table.css" />
